# long-sus

./: .gitignore  AGENTS.md  README.md  log.md  pyproject.toml
.github/workflows/: deploy-dashboard-pages.yml
baseline_fits/: country_baseline_fits_2024.json
dashboard/: app.mjs  content.mjs  index.html  interventions.mjs  runtime.mjs  styles.css
dashboard/assets/: manifest.json  usa_analytic_presets.json  usa_calibration.json  usa_demography.json  usa_eta_multipliers.json  usa_validation_scenarios.json
dashboard/assets/areas/brazil/: analytic_presets.json  calibration.json  demography.json
dashboard/assets/areas/china/: analytic_presets.json  calibration.json  demography.json
docs/: dashboard.md  pipeline.md  results_tutorial.md  usa_validation.md
scripts/: build_baseline_fits.py  generate_tfr_country_comparison.py  generate_wpp_sr_reference_plot.py  render_baseline_fit_diagnostics.py  run_usa_pipeline.py
src/long_sus/: __init__.py  calibration.py  catalog.py  cli.py  config.py  countries.py  dashboard_assets.py  dashboard_capture.py  data_sources.py  documentation.py  external_paths.py  intervention_assets.py  pipeline.py  plots.py  projection.py  query.py  scenarios.py  specs.py  sr_bridge.py  sr_intervention.py  uptake.py
tasks/: lessons.md  todo.md
tests/: test_cli.py  test_country_baseline_fits.py  test_eta_shift_direction.py  test_generated_outputs.py  test_projection.py  test_query_api.py  test_uptake.py  test_validation_dashboard.py
tests/js_helpers/: build_analytic_asset.mjs  check_intervention_store.mjs  run_projection_parity.mjs
(+51 files in other folders)
