[project]
name = "long-sus"
version = "0.1.0"
description = "Longevity-intervention population query toolkit"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
]

[project.scripts]
long-sus = "long_sus.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
